...
                app:tint="@color/blue"
                android:background="@drawable/rounded_box"
                android:backgroundTint="@color/light_glass"/>

            <!--Comment Button-->
            <Button
                android:id="@+id/comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_glass"
                android:text="@string/comments_button_text"
                android:textColor="@color/light_text"
...
                android:textSize="6pt"
                app:iconTint="@color/light_text" />
        </FrameLayout>

        <!--Event Name-->
        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/default_event_name"
            android:textSize="14pt"
            android:textColor="@color/blue"
...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="5dp">

                <TextView
                    android:id="@+id/reported_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/default_reported_num"
                    android:textSize="7pt"
...
                    android:gravity="center"
                    android:background="@drawable/rounded_box"
                    android:backgroundTint="@color/light_glass"/>

                <!--Delete Button-->
                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_red"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="@string/delete_event_button_text"
...
                app:icon="@drawable/rounded_report_24"
                app:iconTint="@color/dark_text"/>
        </LinearLayout>

        <!--Bottom Info-->
        <LinearLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/light_glass"
...
