<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/permanent_warning_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/permanent_warning_title"
        android:textSize="14pt"
        android:textColor="@color/dark_red"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/permanent_warning_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permanent_warning_title"
        android:text="@string/permanent_warning_description"
        android:textSize="10pt"
        android:textColor="@color/light_text"
        android:gravity="center"
        android:fontFamily="@font/roboto"/>

    <Button
        android:id="@+id/permanent_warning_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permanent_warning_description"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dark_red"
        android:text="@string/delete_button_text"
        android:textColor="@color/light_text"
        android:fontFamily="@font/roboto"
        app:icon="@drawable/rounded_delete_forever_24"
        app:iconTint="@color/light_text"/>

    <ImageButton
        android:id="@+id/permanent_warning_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/rounded_arrow_back_24"
        app:tint="@color/blue"
        android:padding="7dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/light_glass"/>
</androidx.constraintlayout.widget.ConstraintLayout>