...
    android:padding="15dp"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_dialog_title"
        android:textSize="12pt"
        android:textColor="@color/green"
        android:fontFamily="@font/roboto"/>

    <Space
        android:layout_width="match_parent"
...
        android:layout_width="match_parent"
        android:layout_height="2.5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_dialog_list"
        android:textSize="7pt"
        android:textColor="@color/light_text"
        android:fontFamily="@font/roboto"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="?android:attr/buttonBarStyle"
...
