package com.example.auroraevents;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.isDialog;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.isAssignableFrom;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.example.auroraevents.TestsSupport.clickChildViewWithId;
import static com.example.auroraevents.TestsSupport.setUpEvent;
import static com.example.auroraevents.TestsSupport.signIn;
import static com.example.auroraevents.TestsSupport.takeDownEvent;
import static org.hamcrest.CoreMatchers.containsString;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.hasToString;

import androidx.test.espresso.contrib.RecyclerViewActions;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.rules.ActivityScenarioRule;

import com.example.auroraevents.model.Event;

import org.junit.After;
import org.junit.Before;
import org.junit.BeforeClass;
import org.junit.FixMethodOrder;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runners.MethodSorters;

import java.time.LocalDateTime;

/**
 * tests the comment Fragment
 */
@FixMethodOrder(MethodSorters.NAME_ASCENDING)
public class CommentFragmentTest {
    //Testing with Live database is a big no-no. Refactor with Mockito...
    /**
    Event event;
    //rules so it works
    @Rule
    public ActivityScenarioRule<MainActivity> activityRule =
            new ActivityScenarioRule<>(MainActivity.class);

    @BeforeClass
    public static void prepare(){
        signIn();
    }

    @Before
    public void before(){
        onView(withId(R.id.nav_browse)).check(matches(isDisplayed()));
        event = new Event(
                "orgId",
                "extremeTurkeyTactics",
                "description",
                "free",
                LocalDateTime.now().plusDays(2),
                LocalDateTime.now().minusDays(1),
                LocalDateTime.now().plusDays(1),
                "Location",
                false,
                -1,
                10,
                null);

        setUpEvent(event);

        onView(withId(R.id.nav_browse)).perform(click());
        onData(hasToString(containsString("extremeTurkeyTactics")))
                .inAdapterView(withId(R.id.events_list))
                .perform(click());
        try { Thread.sleep(2000); } catch (InterruptedException e) {}
        onView(allOf(withId(R.id.event_name),isDescendantOfA(isAssignableFrom(android.widget.ScrollView.class)))).check(matches(withText("extremeTurkeyTactics")));
        onView(withId(R.id.comment_button)).perform(click());
    }

    @After
    public void after() {
        if (event != null) {
            takeDownEvent(event);
        }

    }



    @Test
    public void test02_testPostComment() {
        String testComment = "This is a test comment " + System.currentTimeMillis();

        onView(withId(R.id.edit_text_comment))
                .perform(typeText(testComment), pressImeActionButton(), closeSoftKeyboard());

        try { Thread.sleep(500); } catch (InterruptedException e) {}
        onView(withId(R.id.button_post)).perform(click());

        try { Thread.sleep(3500); } catch (InterruptedException e) {}
        onView(withId(R.id.recycler_view_comments))
                .check(matches(hasDescendant(withText(testComment))));


    }


    @Test
    public void test01_barVisibility(){
        onView(withId(R.id.recycler_view_comments)).check(matches(isDisplayed()));
        onView(withId(R.id.nav_bar)).check(matches(withEffectiveVisibility(ViewMatchers.Visibility.GONE)));
    }



    @Test
    public void test03_testPostComment2() {
        String testComment = "This is a test comment " + System.currentTimeMillis();

        onView(withId(R.id.edit_text_comment))
                .perform(typeText(testComment), pressImeActionButton(), closeSoftKeyboard());

        try { Thread.sleep(500); } catch (InterruptedException e) {}
        onView(withId(R.id.button_post)).perform(click());

        try { Thread.sleep(3500); } catch (InterruptedException e) {}
        onView(withId(R.id.recycler_view_comments))
                .check(matches(hasDescendant(withText(testComment))));

        onView(withId(R.id.recycler_view_comments))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, clickChildViewWithId(R.id.comment_button_reply)));

        onView(withId(R.id.reply_indicator)).check(matches(isDisplayed()));
        onView(withId(R.id.text_replying_to)).check(matches(withText(containsString("Replying to @"))));

        String replyText = "This is a reply " + System.currentTimeMillis();
        onView(withId(R.id.edit_text_comment))
                .perform(typeText(replyText), closeSoftKeyboard());

        onView(withId(R.id.button_post)).perform(click());

        try { Thread.sleep(3500); } catch (InterruptedException e) {}
        onView(withId(R.id.recycler_view_comments))
                .check(matches(hasDescendant(withText(replyText))));

    }


    @Test
    public void test04_cancelReply(){
        String testComment = "This is a test comment " + System.currentTimeMillis();

        onView(withId(R.id.edit_text_comment))
                .perform(typeText(testComment), pressImeActionButton(), closeSoftKeyboard());

        try { Thread.sleep(500); } catch (InterruptedException e) {}
        onView(withId(R.id.button_post)).perform(click());

        try { Thread.sleep(3500); } catch (InterruptedException e) {}
        onView(withId(R.id.recycler_view_comments))
                .check(matches(hasDescendant(withText(testComment))));

        onView(withId(R.id.recycler_view_comments))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, clickChildViewWithId(R.id.comment_button_reply)));

        onView(withId(R.id.reply_indicator)).check(matches(isDisplayed()));
        onView(withId(R.id.text_replying_to)).check(matches(withText(containsString("Replying to @"))));

        onView(withId(R.id.button_cancel_reply)).perform(click());
        onView(withId(R.id.reply_indicator)).check(matches(withEffectiveVisibility(ViewMatchers.Visibility.GONE)));

    }


    @Test
    public void test05_deletePost(){
        String testComment = "This is a test comment " + System.currentTimeMillis();

        onView(withId(R.id.edit_text_comment))
                .perform(typeText(testComment), pressImeActionButton(), closeSoftKeyboard());

        try { Thread.sleep(500); } catch (InterruptedException e) {}
        onView(withId(R.id.button_post)).perform(click());

        try { Thread.sleep(3500); } catch (InterruptedException e) {}
        onView(withId(R.id.recycler_view_comments))
                .check(matches(hasDescendant(withText(testComment))));

        onView(withId(R.id.recycler_view_comments))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, clickChildViewWithId(R.id.comment_button_delete)));
        onView(withText("Delete"))
                .inRoot(isDialog())
                .check(matches(isDisplayed()))
                .perform(click());
        try { Thread.sleep(3000); } catch (InterruptedException e) {}
        onView(withText(testComment)).check(doesNotExist());
    }


**/
}
